# image_recognition

image_recognition/: package.xml
image_recognition_color_extractor/: CMakeLists.txt
image_recognition_people_detection/: CMakeLists.txt  README.md  package.xml  setup.py
image_recognition_people_detection/scripts/: get_people_detections_srv_test  people_detection_node
